--- a/.pylintrc
+++ b/.pylintrc
@@ -4,7 +4,5 @@
 # C0301: Line too long
 # R0911: Too many return statements
 # R0912: Too many branches
-# R0915: Too many statements (
+# R0915: Too many statements
 disable=C0111,C0114,C0301,R0911,R0912,R0915
-
-
