--- a/action.yml
+++ b/action.yml
@@ -56,5 +56,5 @@ outputs:
 
 runs:
   using: "docker"
-  image: 'Dockerfile'
-  #image: "docker://kvendingoldo/git-flow-action:v0.0.1-alpha1"
+  #image: 'Dockerfile'
+  image: "docker://kvendingoldo/git-flow-action:v0.0.1-alpha4"
