--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,41 +3,108 @@ name: pipeline
 on:
   push:
     tags:
-      - '**'
+      - "**"
+  pull_request:
+    branches:
+      - main
 
 env:
   image_name: git-flow-action
 
 jobs:
-  build:
+  unit-tests:
     runs-on: ubuntu-24.04
     steps:
-      -
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      -
-        name: Set up QEMU
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov codecov
+          pip install -e .
+
+      - name: Run unit tests with coverage
+        run: |
+          pytest tests/unit/ -v --cov=src --cov-report=xml --cov-report=term-missing
+
+      - name: Upload unit test coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          fail_ci_if_error: true
+          verbose: true
+          flags: unit-tests
+          name: codecov-umbrella
+          yml: ./codecov.yml
+
+  functional-tests:
+    runs-on: ubuntu-24.04
+    needs: unit-tests
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov codecov
+          pip install -e .
+
+      - name: Run functional tests with coverage
+        run: |
+          pytest tests/functional/ -v --cov=src --cov-report=xml --cov-report=term-missing --cov-append
+
+      - name: Upload functional test coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          fail_ci_if_error: true
+          verbose: true
+          flags: functional-tests
+          name: codecov-umbrella
+          yml: ./codecov.yml
+
+  build:
+    needs: [unit-tests, functional-tests]
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-      -
-        name: Calculate image version
+      - name: Calculate image version
         id: get_variables
         run: |
-          version=$(echo $GITHUB_REF | cut -d/ -f3- | sed 's/\//-/g')       
+          version=$(echo $GITHUB_REF | cut -d/ -f3- | sed 's/\//-/g')
           echo "version=${version}" >> $GITHUB_OUTPUT
-      -
-        name: Build docker image and push it
+      - name: Build docker image and push it
         uses: docker/build-push-action@v6
         with:
           context: .
