--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -28,7 +28,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov codecov
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
           pip install -e .
 
       - name: Run unit tests with coverage
@@ -63,7 +64,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
           pip install -e .
 
       - name: Run functional tests
