--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   unit-tests:
-    if: !contains(github.event.head_commit.message, '[skip ci]')
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -49,7 +49,7 @@ jobs:
           yml: ./codecov.yml
 
   functional-tests:
-    if: !contains(github.event.head_commit.message, '[skip ci]')
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-24.04
     needs: unit-tests
     steps:
@@ -75,9 +75,11 @@ jobs:
           pytest tests/functional/ -v
 
   build:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     needs: [unit-tests, functional-tests]
-    if: !contains(github.event.head_commit.message, '[skip ci]')
     runs-on: ubuntu-24.04
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
