--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -78,6 +78,8 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     needs: [unit-tests, functional-tests]
     runs-on: ubuntu-24.04
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
